--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,5 @@
-FIXME: list authors' names and email addresses.
+* Anne Fouilloux <a.c.fouilloux@geo.uio.no>
+* Florian Huber <f.huber@esciencecenter.nl>
+* Dafne van Kuppevelt <d.vankuppevelt@esciencecenter.nl>
+* Peter Steinbach <p.steinbach@hzdr.de>
+* Berend Weel <b.weel@esciencecenter.nl>
