Adding myself to the author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 * Dafne van Kuppevelt <d.vankuppevelt@esciencecenter.nl>
 * Peter Steinbach <p.steinbach@hzdr.de>
 * Berend Weel <b.weel@esciencecenter.nl>
+* Colin Sauze <cos@aber.ac.uk>
