--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@
 * Peter Steinbach <p.steinbach@hzdr.de>
 * Berend Weel <b.weel@esciencecenter.nl>
 * Colin Sauze <cos@aber.ac.uk>
+* Djura Smits <d.smits@esciencecenter.nl>
