--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@
 * Peter Steinbach <p.steinbach@hzdr.de>
 * Berend Weel <b.weel@esciencecenter.nl>
 * Colin Sauze <cos@aber.ac.uk>
+* Samantha Wittke <samantha.wittke@aalto.fi>
 * Djura Smits <d.smits@esciencecenter.nl>
